# rust-tracing

./: .gitignore  2  Cargo.toml  LICENSE  README.md
examples/: denoise.rs
src/: aabb.rs  bvh.rs  camera.rs  color.rs  common.rs  constant_medium.rs  hittable.rs  interval.rs  main.rs  material.rs  perlin.rs  quad.rs  ray.rs  renderer.rs  sphere.rs  texture.rs  vec3.rs
src/hittable/: bvh.rs  constant_medium.rs  mod.rs  quad.rs  sphere.rs
src/math/: aabb.rs  color.rs  mod.rs  perlin.rs  ray.rs  vec3.rs
